environment/aws-cf-rancher-net.template
Parameters:
  AvailabilityZone:
    Description: Select the Availability Zone for your Deployment
    Type: AWS::EC2::AvailabilityZone::Name
Resources:
  User:
    Type: AWS::IAM::User
    Properties:
      UserName:
        Fn::Join:
          ["-", ["Ref": "AWS::Region", "rancher-user"]]
  Policy:
    Type: AWS::IAM::Policy
    Properties:
      PolicyName: rancher-policy
      Users:
        - Ref: User
      PolicyDocument:
        Version: "2012-10-17"
        Statement:
        - Action:
            - ec2:*
          Effect: Allow
          Resource: "*"
#          Condition:
#            StringEquals:
#              ec2:Region: ap-southeast-2 # Is it possible to not hardcode this?
        - Action:
            - iam:ListInstanceProfiles
          Effect: Allow
          Resource: "*"
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: rancher-igw
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      InstanceTenancy: default
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: rancher-vpc
  VPCGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId:
        Ref: InternetGateway
      VpcId:
        Ref: VPC
  SubnetPublic:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: VPC
      AvailabilityZone: !Ref AvailabilityZone
      CidrBlock: 10.0.1.0/24
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: rancher-subnet-public
  SubnetPrivate:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: VPC
      AvailabilityZone: !Ref AvailabilityZone
      CidrBlock: 10.0.2.0/24
      Tags:
        - Key: Name
          Value: rancher-subnet-private
  RouteTablePublic:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: VPC
      Tags:
        - Key: Name
          Value: rancher-subnet-rt-public
  Route:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: RouteTablePublic
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: InternetGateway
  RouteTablePrivate:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: VPC
      Tags:
        - Key: Name
          Value: rancher-subnet-rt-private
  RouteTableAssociationPublic:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: RouteTablePublic
      SubnetId:
        Ref: SubnetPublic
  RouteTableAssociationPrivate:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: RouteTablePrivate
      SubnetId:
        Ref: SubnetPrivate
  InstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Open ports needed for Rancher and Docker
      VpcId:
        Ref: VPC
      SecurityGroupIngress:
        - IpProtocol: icmp
          FromPort: "8"
          ToPort: "-1"
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: "80"
          ToPort: "80"
          CidrIp: 0.0.0.0/0
        # needed for Docker machine to provision hosts
        - IpProtocol: tcp
          FromPort: "22"
          ToPort: "22"
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: "2376"
          ToPort: "2376"
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: "8080"
          ToPort: "8080"
          CidrIp: 0.0.0.0/0
        # needed for Rancher network
        - IpProtocol: udp
          FromPort: "500"
          ToPort: "500"
          CidrIp: 0.0.0.0/0
        - IpProtocol: udp
          FromPort: "4500"
          ToPort: "4500"
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: rancher-security-group
  AllPortsSecurityGroupIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: "-1"
      FromPort: "-1"
      ToPort: "-1"
      GroupId: !Ref InstanceSecurityGroup
      SourceSecurityGroupId: !Ref InstanceSecurityGroup
  EBSVolume01:
    Type: AWS::EC2::Volume
    Properties:
      VolumeType: gp2
      AvailabilityZone: !Ref AvailabilityZone
      Size: 40
      Tags:
        - Key: Name
          Value: ebs-volume-01
Outputs:
  SubnetPublic:
    Value: !Ref SubnetPublic
    Export:
      Name: SubnetPublic
  InstanceSecurityGroup:
    Value: !Ref InstanceSecurityGroup
    Export:
      Name: InstanceSecurityGroup
  EBSVolume01:
    Value: !Ref EBSVolume01
    Export:
      Name: EBSVolume01
